my-test/testsuite_scan/ir/SingleSource/UnitTests/Vector/LASX/lasx-xvreplve.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvreplve.c:7:3: error: use of undeclared identifier '__m256i'
    7 |   __m256i __m256i_out, __m256i_result;
      |   ^~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvreplve.c:8:3: error: use of undeclared identifier '__m256'
    8 |   __m256 __m256_out, __m256_result;
      |   ^~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvreplve.c:9:3: error: use of undeclared identifier '__m256d'
    9 |   __m256d __m256d_out, __m256d_result;
      |   ^~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvreplve.c:10:3: error: use of undeclared identifier 'v4u64'
   10 |   v4u64 v4u64_op0, v4u64_op1, v4u64_op2;
      |   ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvreplve.c:11:3: error: use of undeclared identifier 'v8i32'
   11 |   v8i32 v8i32_op0, v8i32_op1, v8i32_op2;
      |   ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvreplve.c:19:3: error: use of undeclared identifier 'v4u64_op0'
   19 |   v4u64_op0 = (v4u64){0x0000000000000000, 0x0000000000000000,
      |   ^~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvreplve.c:19:16: error: use of undeclared identifier 'v4u64'
   19 |   v4u64_op0 = (v4u64){0x0000000000000000, 0x0000000000000000,
      |                ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvreplve.c:22:1: error: use of undeclared identifier '__m256i_result'
   22 | __m256i_result = (__m256i){0x0000000000000000, 0x0000000000000000,
      | ^~~~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvreplve.c:22:19: error: use of undeclared identifier '__m256i'
   22 | __m256i_result = (__m256i){0x0000000000000000, 0x0000000000000000,
      |                   ^~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvreplve.c:24:3: error: use of undeclared identifier '__m256i_out'
   24 |   __m256i_out = __lasx_xvreplve_b((__m256)v4u64_op0, int_op1);
      |   ^~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvreplve.c:24:17: error: call to undeclared function '__lasx_xvreplve_b'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   24 |   __m256i_out = __lasx_xvreplve_b((__m256)v4u64_op0, int_op1);
      |                 ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvreplve.c:24:36: error: use of undeclared identifier '__m256'
   24 |   __m256i_out = __lasx_xvreplve_b((__m256)v4u64_op0, int_op1);
      |                                    ^~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvreplve.c:25:19: error: use of undeclared identifier '__m256i_result'
   25 |   check_lasx_out(&__m256i_result, &__m256i_out, sizeof(__m256i_out), __FILE__, __LINE__);
      |                   ^~~~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvreplve.c:25:36: error: use of undeclared identifier '__m256i_out'
   25 |   check_lasx_out(&__m256i_result, &__m256i_out, sizeof(__m256i_out), __FILE__, __LINE__);
      |                                    ^~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvreplve.c:25:56: error: use of undeclared identifier '__m256i_out'
   25 |   check_lasx_out(&__m256i_result, &__m256i_out, sizeof(__m256i_out), __FILE__, __LINE__);
      |                                                        ^~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvreplve.c:27:3: error: use of undeclared identifier 'v4u64_op0'
   27 |   v4u64_op0 = (v4u64){0x0000000000000000, 0x0000000000000000,
      |   ^~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvreplve.c:27:16: error: use of undeclared identifier 'v4u64'
   27 |   v4u64_op0 = (v4u64){0x0000000000000000, 0x0000000000000000,
      |                ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvreplve.c:30:1: error: use of undeclared identifier '__m256i_result'
   30 | __m256i_result = (__m256i){0x0000000000000000, 0x0000000000000000,
      | ^~~~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvreplve.c:30:19: error: use of undeclared identifier '__m256i'
   30 | __m256i_result = (__m256i){0x0000000000000000, 0x0000000000000000,
      |                   ^~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
